[package]
name = "markdown_to_text"
version = "1.0.0"
authors = ["Florent Bécart <florent.becart@gmail.com>"]
edition = "2018"
description = "Converts Markdown to plain text."
repository = "https://github.com/fbecart/markdown_to_text"
readme = "README.md"
keywords = ["Markdown"]
license = "MIT"

[dependencies]
pulldown-cmark = "0.7"
